# slow_steaming_engine

./: .gitignore  .gitignore copy  app.py  pyproject.toml
.streamlit/: config.toml
_pages/: __init__.py  cost_benefit.py  dashboard.py  emissions.py  route_optimization.py  speed_optimization.py  vessel_input.py
assets/: sample_route_data.json  sample_vessel_data.json
attached_assets/: Pasted-Maritime-Slow-Steaming-Optimization-App-Requirements-Document-Executive-Summary-This-document-outlin-1745479720764.txt
backend/: main.py
models/: __init__.py  route.py  vessel.py  weather.py
tests/: README.md  __init__.py  conftest.py  run_tests.py  test_data_processing.py  test_emissions.py  test_vessel.py  test_vessel_input_page.py
utils/: __init__.py  data_processing.py  emissions.py  optimization.py  visualization.py
