[tool.poetry]
name = "slow-steaming-engine"
version = "0.1.0"
description = "A Streamlit app for optimizing slow steaming in shipping"


[tool.poetry.dependencies]
python = ">=3.11"
folium = ">=0.19.5"
numpy = ">=2.2.5"
plotly = ">=6.0.1"
scipy = ">=1.15.2"
streamlit-folium = ">=0.25.0"
streamlit = ">=1.44.1"
pandas = ">=2.2.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_functions = "test_*"
python_classes = "Test*"
markers = [
    "models: tests for model classes",
    "utils: tests for utility functions",
    "pages: tests for Streamlit pages"
]